--- a/public/calendar.css
+++ b/public/calendar.css
@@ -44,7 +44,6 @@ body, .calendar, .month-selector label {
     text-align: center; /* Centers the caption horizontally */
     margin-top: var(--margin-md); /* Add some space above the caption */
     margin-bottom: var(--margin-md); /* Add some space below the caption */
-    font-family: 'Montserrat', 'Helvetica Neue', Arial, sans-serif; /* Modern and clean font */
 }
 
 .calendar-wrapper {
@@ -53,7 +52,7 @@ body, .calendar, .month-selector label {
 }
 
 .calendar th {
-    background-color: #A52A2A;
+    background-color: var(--accent-color);
     font-weight: 700; /* Valid font-weight */
     font-size: large;
     color: white;
@@ -87,8 +86,9 @@ span.quiz {
     width: 2.5ch; /* Width equal to the height for a perfect circle */
     height: 2.5ch; /* Height of the circle */
     line-height: 2.5ch; /* Ensures the text is centered vertically */
-    background-color: #ff4500; /* Circle's background color */
+    background-color: var(--smu-blue); /* Circle's background color */
     text-align: center; /* Centers the text horizontally */
+    color: white;
     border-radius: 50%; /* Makes the shape a circle */
 }
 
@@ -104,7 +104,7 @@ span.lab::after {
     display: block; /* Ensures the dot takes up space */
     width: 1ch; /* Width of the dot */
     height: 1ch; /* Height of the dot */
-    background-color: #ff4500; /* Dot color */
+    background-color: var(--smu-blue); /* Dot color */
     border-radius: 50%; /* Makes the shape a circle */
     position: absolute; /* Positions the dot relative to the span */
     left: 50%; /* Centers the dot horizontally */
@@ -118,14 +118,14 @@ span.homework {
     width: 2.5ch; /* Width equal to the height for a perfect circle */
     height: 2.5ch; /* Height of the circle */
     line-height: 2.5ch; /* Centers the text vertically */
-    border: 2px solid #ff4500; /* Creates the circle outline */
+    border: 2px solid var(--smu-blue); /* Creates the circle outline */
     text-align: center; /* Centers the text horizontally */
     border-radius: 50%; /* Makes the shape a circle */
 }
 
 span.office-hours {
     display: inline-block; /* Allows for width, height, and padding to be applied */
-    border-bottom: 2px solid #ff4500; /* Creates the underline with the specified color and thickness */
+    border-bottom: 2px solid var(--smu-blue); /* Creates the underline with the specified color and thickness */
     padding-bottom: 0.1ch; /* Adds a bit of space between the number and the underline */
 }
 
